--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ header {
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
+    z-index: 1;
 }
 header h1 {
     font-size: 44px;
@@ -37,6 +38,7 @@ header h2 {
 /* CORPO DO APP */
 main {
     width: 414px;
+    /* height: 1026px; */
     /* height: calc(100vh + 430px); */
     position: relative;
     background-color: #EEEEEE;
@@ -67,21 +69,56 @@ main {
     padding-bottom: 17px; /* DETALHE BESTA DA BARRINHA DE ROLAGEM */
     /* overflow: hidden; */
 }
+/* 
+.menu-opcao-checado {
+    box-sizing: border-box;
+    display: none;
+    width: 128x;
+    height: auto;
+    border-radius: 9px;
+    margin: auto;
+    background-color: #000000;
+    position: sticky;
+    z-index: 1;
+    border: 5px solid #32B72F;
+}
+ */
+/*  
+.sinal-checado-verde {
+     width: auto;
+     height: 10px;
+     border-radius: 50px;
+     background-color: blue;
+     border: 5px solid black;
+     padding: 0;
+ }
+ */
 .menu-opcao {
     box-sizing: border-box;
     width: 144x;
     height: auto;
     background-color: #ffffff;
     border-radius: 9px;
-    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25); */
     margin-right: 16px;
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
+    position: relative;
+    /* z-index: 0; */
 }
-.menu-opcao * {
+.menu-opcao > h1 {
     width: 144px;
     padding-left: 14px;
     padding-right: 14px;
 }
-.menu-opcao img {
+.menu-opcao > h2 {
+    width: 144px;
+    padding-left: 14px;
+    padding-right: 14px;
+}
+.menu-opcao > img {
+    width: 144px;
+    padding-left: 14px;
+    padding-right: 14px;
     height: 87px;
     border-radius: 4px;
     padding-top: 18px;
@@ -110,6 +147,14 @@ main {
 }
 .menu-opcao-ultimo {
     margin-right: 19px;
+}
+ion-icon {
+    color: #32B72F;
+    width: 19px;
+    height: 19px;
+    position: absolute;
+    bottom: 14px;
+    right: 11px;
 }
 /* BARRA FIXA DE BAIXO */
 footer {
