--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ h1 {
 h2 {
     font-family: 'Roboto', sans-serif;
 }
+a {
+    text-decoration: none;
+}
 /* BARRA FIXA DO TOPO */
 header {
     width: 414px;
@@ -101,7 +104,7 @@ main {
     border-radius: 9px;
     /* box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25); */
     margin-right: 16px;
-    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
     position: relative;
     /* z-index: 0; */
 }
@@ -149,6 +152,7 @@ main {
     margin-right: 19px;
 }
 ion-icon {
+    /* display: none; */
     color: #32B72F;
     width: 19px;
     height: 19px;
@@ -185,7 +189,19 @@ footer {
     /* border: 1px solid black; */
     width: 200px;
 }
-
+.barra-fixa-baixo-cinza {
+    /* display: none; */        /* DESATIVA BARRA FIXA DE BAIXO CINZA */
+}
+.barra-fixa-baixo-verde {
+    display: none;              /* DESATIVA BARRA FIXA DE BAIXO VERDE */
+}
+.barra-fixa-baixo-verde div {
+    background-color: #32B72F;
+}
+.barra-fixa-baixo-verde h2 {
+    font-weight: 700;
+    /* border: 1px solid black; */
+}
 /* REFERÊNCIAS FONT-FAMILY CSS */
 
 /* 
