--- a/css/style.css
+++ b/css/style.css
@@ -102,9 +102,9 @@ main {
     height: auto;
     background-color: #ffffff;
     border-radius: 9px;
-    /* box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25); */
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
     margin-right: 16px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
+    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F; */
     position: relative;
     /* z-index: 0; */
 }
@@ -152,7 +152,7 @@ main {
     margin-right: 19px;
 }
 ion-icon {
-    /* display: none; */
+    display: none;
     color: #32B72F;
     width: 19px;
     height: 19px;
