--- a/css/style.css
+++ b/css/style.css
@@ -102,9 +102,8 @@ main {
     height: auto;
     background-color: #ffffff;
     border-radius: 9px;
-    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
     margin-right: 16px;
-    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F; */
     position: relative;
     /* z-index: 0; */
 }
@@ -152,13 +151,69 @@ main {
     margin-right: 19px;
 }
 ion-icon {
-    display: none;
+    /* display: none; */
     color: #32B72F;
     width: 19px;
     height: 19px;
     position: absolute;
     bottom: 14px;
     right: 11px;
+}
+/* BORDAS VERDES */
+.menu-opcao-pizza-escondido {
+        box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+}
+.menu-opcao-lasanha-escondido {
+        box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+}
+.menu-opcao-sushi-escondido {
+        box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+}
+.menu-opcao-refrigerante-escondido {
+        box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+}
+.menu-opcao-suco-escondido {
+        box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+}
+.menu-opcao-coco-escondido {
+        box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+}
+.menu-opcao-bolo-escondido {
+        box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+}
+.menu-opcao-sorvete-escondido {
+        box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+}
+.menu-opcao-pudim-escondido {
+        box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+}
+/* SINAIS VERDES ION-ICON */
+.pizza-sinal-verde-escondido {
+    display: none;
+}
+.lasanha-sinal-verde-escondido {
+    display: none;
+}
+.sushi-sinal-verde-escondido {
+    display: none;
+}
+.refrigerante-sinal-verde-escondido {
+    display: none;
+}
+.suco-sinal-verde-escondido {
+    display: none;
+}
+.coco-sinal-verde-escondido {
+    display: none;
+}
+.bolo-sinal-verde-escondido {
+    display: none;
+}
+.sorvete-sinal-verde-escondido {
+    display: none;
+}
+.pudim-sinal-verde-escondido {
+    display: none;
 }
 /* BARRA FIXA DE BAIXO */
 footer {
@@ -189,19 +244,22 @@ footer {
     /* border: 1px solid black; */
     width: 200px;
 }
+/* 
 .barra-fixa-baixo-cinza {
-    /* display: none; */        /* DESATIVA BARRA FIXA DE BAIXO CINZA */
+    display: none;        DESATIVA BARRA FIXA DE BAIXO CINZA
 }
 .barra-fixa-baixo-verde {
-    display: none;              /* DESATIVA BARRA FIXA DE BAIXO VERDE */
+    display: none;        DESATIVA BARRA FIXA DE BAIXO VERDE
 }
 .barra-fixa-baixo-verde div {
     background-color: #32B72F;
 }
 .barra-fixa-baixo-verde h2 {
     font-weight: 700;
-    /* border: 1px solid black; */
+    border: 1px solid black;
 }
+*/
+
 /* REFERÊNCIAS FONT-FAMILY CSS */
 
 /* 
