--- a/css/style.css
+++ b/css/style.css
@@ -254,60 +254,101 @@ footer {
     font-weight: 400;
 }
 /* ABA DE CONFIRMAÇÃO DE PEDIDO */
+/* CAIXAS */
 .fundo-apagado {
-    /* top: 10px; */
     width: 100vw;
     height: 100vh;
     position: fixed;
     z-index: 2;
-    background-color: rgba(0, 0, 0, 0.9);
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-sizing: border-box;
 }
 .confirmar-pedido-popup {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto auto;
     width: 377px;
-    height: auto;
+    /* height: 342px; */
+    /* top: calc(50vh - 171px); */
     border-radius: 9px;
     box-shadow: 0px 0px 10px 1px #00000040;
     background-color: #50D074;
-    /* top: 50vh; */
     position: relative;
-    /* flex-direction: column; */
-    /* justify-content: center; */
     box-sizing: border-box;
     padding: 21px 24px;
 }
-.confirmar-pedido-popup * {
+.botao-final {
+    background-color: #ffffff;
+    width: 329px;
+    height: 52px;
+    padding-top: 13px;
+    border-radius: 100px;
+    box-sizing: border-box;
+    /* border: 1px solid black; */
+    display: inline-flex;
     text-align: center;
+    /* border: 1px solid black; */
+    /* display: flex; */
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* margin: auto auto; */
 }
-.confirmar-pedido-popup > div {
+.confere-opcao {
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
 }
-.botao-final {
-    width: auto;
-    border: 1px solid black;
-    display: flex;
-    /* text-align: center; */
-    /* align-items: center; */
-    /* justify-content: center; */
+.confirmar-pedido-popup :nth-child(1) {
+    margin-bottom: 28px;
 }
-.botao-final h2 {
-    /* display: inline; */
-    /* text-align: center; */
-    /* align-items: center; */
-    /* justify-content: center; */
+.confirmar-pedido-popup :nth-child(2) {
+    margin-bottom: -13px;
 }
+.confirmar-pedido-popup :nth-child(3) {
+    margin-bottom: -13px;
+}
+.confirmar-pedido-popup :nth-child(4) {
+    margin-bottom: -13px;
+}
+.confirmar-pedido-popup :nth-child(5) {
+    margin-bottom: -4px;
+}
+.confirmar-pedido-popup :nth-child(7) {
+    margin-top: 21px;
+}
+/* TEXTOS */
 .confirmar-pedido-popup h2{
     color: #ffffff;
     font-size: 22px;
     font-weight: 700;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
-
+.confere-opcao h2 {
+    font-weight: 400;
+}
+.confirmar-pedido-popup :nth-child(7) {
+    font-size: 20px;
+}
+.botao-final h2 {
+    color: #50D074;
+    /* display: flex; */
+    text-align: center;
+    /* justify-content: center; */
+    /* align-items: center; */
+    margin: auto auto;
+    /* border: 1px solid black; */
+    /* width: 200px; */
+}
+.confere-opcao-total {
+    display: flex;
+    justify-content: space-between;
+}
+.escondido {
+    display: none;
+}
 /* 
 .barra-fixa-baixo-cinza {
     DESATIVA BARRA FIXA DE BAIXO CINZA
